--- a/manuscript/01_main.Rmd
+++ b/manuscript/01_main.Rmd
@@ -62,9 +62,9 @@ To assess patterns of habitat selection by birds, we first excluded birds not id
 
 Analyses were conducted at two main levels of response. At the highest level, we looked for patterns of habitat selection in the whole bird community, by summing all the individual species detections per point count to obtain one 'bird abundance' value for each count, which was then used as the response variable. GLMMs were constructed using the *lme4* package [@bates2015], with the null model containing observer as a fixed effect (detections had *71:29* observer ratio) and sampling points and days as crossed random effects (model construction detailed later). Point ID was used a random effect because of repeated sampling in the same points over the 13 weeks, and sampling day in order to account for the random variability in each unique day. Residuals were modelled as coming from a Poisson distribution with a log link function.
 
-At the second level, we investigated whether foraging guilds differed in their habitat selection patterns. The original bird observations were summarised by guild so as to obtain for each point abundance values of all the guilds that were observed. Only two guilds had sufficiently high number of overall detections, insectivores (rather, 'invertebrate-feeders') and omnivores. Models were built separately for these two guilds, using the *glmmTMB* package [@brooks2017] to avoid convergence issues. The data summarised at guild level was insufficient for utilisation of two crossed random effects (as was done for the community-level models), so the random effect of sampling day, which had less estimated variance than that of the point, was excluded from the models. This did not result in major differences in the fixed effects estimates and so was not considered to be an issue. The null models had the same fixed effect as in the first case.
+At the second level, we investigated whether foraging guilds differed in their habitat selection patterns. The original bird observations were summarised by guild so as to obtain for each point abundance values of all the guilds that were observed. Only two guilds had sufficiently high number of overall detections, insectivores (rather, 'invertivores') and omnivores. Models were built separately for these two guilds, using the *glmmTMB* package [@brooks2017] to avoid convergence issues. The data summarised at guild level was insufficient for utilisation of two crossed random effects (as was done for the community-level models), so the random effect of sampling day, which had less estimated variance than that of the point, was excluded from the models. This did not result in major differences in the fixed effects estimates and so was not considered to be an issue. The null models had the same fixed effect as in the first case.
 
-Models were constructed following a null model approach, i.e., starting from a null model then building up using stepwise selection of predictors. First, the week variable which had a visible effect (abundances were higher towards the end of the study period; noticed even during the bird counts), and other non-focal variables were added. Following this, the other, focal variables were finally added *(see Table 1)*. Stepwise selection was done by comparing AIC~C~ values of all the models using the AICctab() function from the *bbmle* package [@bolker2020], with an information threshold of 2 dAIC~C~ per df. If a variable was deemed important, its interaction with 'Week' was next tested (i.e., whether or not habitat selection criteria changed with the progress of the season). Once the selection was complete, parsimony was further tested by dropping some complex interaction terms. Finally, the most parsimonious model was selected. At the community level, the final model was a GLMM with Poisson error distribution and log link function fitted with the BOBYQA optimiser *(Table 2)*; the guild-level final models were a Poisson GLMM (log link) for invertebrate-feeders and a negative binomial GLMM (log link) for omnivores.
+Models were constructed following a null model approach, i.e., starting from a null model then building up using stepwise selection of predictors. First, the week variable which had a visible effect (abundances were higher towards the end of the study period; noticed even during the bird counts), and other non-focal variables were added. Following this, the other, focal variables were finally added *(see Table 1)*. Stepwise selection was done by comparing AIC~C~ values of all the models using the AICctab() function from the *bbmle* package [@bolker2020], with an information threshold of 2 dAIC~C~ per df. If a variable was deemed important, its interaction with 'Week' was next tested (i.e., whether or not habitat selection criteria changed with the progress of the season). Once the selection was complete, parsimony was further tested by dropping some complex interaction terms. Finally, the most parsimonious model was selected. At the community level, the final model was a GLMM with Poisson error distribution and log link function fitted with the BOBYQA optimiser *(Table 2)*; the guild-level final models were a Poisson GLMM (log link) for invertivores and a negative binomial GLMM (log link) for omnivores.
 
 For continuous or ordinal variables, both linear and polynomial terms were tested since there was no reason to assume a linear relationship with the predictors. Model diagnostics of all models were explored using the *DHARMa* package [@hartig2020] for distributional assumptions, heteroscedasticity, over-/underdispersion and zero-inflation. All analyses were done using R version ***4.1.1*** [@rcoreteam2020]. Individual figures with multiple graphs were composed using the *patchwork* package for R [@pedersen2020a].
 
@@ -76,13 +76,13 @@ At the community level, bird abundance was affected by observer, week, canopy he
 
 There was an overall increase in bird abundance towards the end of the study period in all sampling points---across the five categories of ground vegetation---but the magnitude of increase was starkly different in each. Points with *Rubus* sp. and those with *Vaccinium* sp. as the dominant ground vegetation had intermediate values of both average abundance and increase in abundance with time. Points with graminoids in the ground layer had the lowest overall abundance as well as the lowest increase (Figure 3). Points with ground layers comprising moss and bare ground both had low abundances in the beginning but towards the end had the highest abundances, i.e., they showed the strongest increases. Bird abundance related positively and negatively with log-transformed variables of canopy heterogeneity and tree density respectively (Figure 3) and these trends did not change noticeably over the course of the study period.
 
-Within the bird community, habitat selection was very different between invertebrate-feeders and omnivores (Table 3). Invertebrate-feeder abundance was affected by observer, proportion of deciduous trees and dominant ground vegetation. Abundance was lower in sampling points with 'Graminoid' ground vegetation than points with other ground layers (Figure 4). Abundance also decreased with deciduous proportion and, notably, since a polynomial term did not give a better fit, there is no evidence for the notion of mixed forests with intermediate deciduous proportions having higher diversity and abundance. Neither of the two trends changed detectably with time.
+Within the bird community, habitat selection was very different between invertivores and omnivores (Table 3). Invertivore abundance was affected by observer, proportion of deciduous trees and dominant ground vegetation. Abundance was lower in sampling points with 'Graminoid' ground vegetation than points with other ground layers (Figure 4). Abundance also decreased with deciduous proportion and, notably, since a polynomial term did not give a better fit, there is no evidence for the notion of mixed forests with intermediate deciduous proportions having higher diversity and abundance. Neither of the two trends changed detectably with time.
 
 On the other hand, omnivore abundance was affected by observer, habitat class, tree density, and canopy heterogeneity, and it changed with time. Abundance of omnivores generally increased as the season progressed, and decreased with increasing tree density, but overall was higher in forest edges than in forest interiors or roadside patches (Figure 5). With canopy heterogeneity, the initial trend appeared to be slightly negative yet almost insignificant, but with every week the trend became more and more positive, such that in week 13 it was very strong. In other words, omnivores were initially indifferent to canopy heterogeneity, and as the season progressed their abundance did not change in relatively homogenous points, but greatly increased in highly heterogenous points (Figure 5).
 
 # Discussion
 
-The overall abundance of the forest bird community after the breeding season seemed to be higher in patches where the canopy was highly heterogeneous. As invertebrate-feeders did not show any particular relationship with canopy heterogeneity, the trend is probably driven by omnivores. At the beginning of the survey, omnivore abundance too was not related to canopy heterogeneity, but this was completely reversed by the end of the study, with the most heterogeneous points having the highest abundance---twice that of the least heterogeneous points which did not see any change in bird abundance at all over the course of the season. The arrival of migrants may have caused an occupation of the previously 'empty' niche and this was most likely because heterogeneity enables the formation of large foraging flocks, with different individuals in the party focused on different aspects of the habitat.
+The overall abundance of the forest bird community after the breeding season seemed to be higher in patches where the canopy was highly heterogeneous. As invertivores did not show any particular relationship with canopy heterogeneity, the trend is probably driven by omnivores. At the beginning of the survey, omnivore abundance too was not related to canopy heterogeneity, but this was completely reversed by the end of the study, with the most heterogeneous points having the highest abundance---twice that of the least heterogeneous points which did not see any change in bird abundance at all over the course of the season. The arrival of migrants may have caused an occupation of the previously 'empty' niche and this was most likely because heterogeneity enables the formation of large foraging flocks, with different individuals in the party focused on different aspects of the habitat.
 
 ## Post-breeding birds track structural characteristics over species diversity
 
@@ -94,7 +94,7 @@ Despite the absence of a significant correlation between canopy heterogeneity an
 
 ## The surprising role of oak in post-breeding season
 
-Birds generally show a hump-shaped trend with proportion of deciduous trees, with highest numbers found in mixed forests and lowest in both purely coniferous and purely broadleaved patches [e.g., @alatalo1981; @jansson2003; @hagar2007; @ohno1997; @felton2010]. However, in alignment with Alatalo's findings [-@alatalo1981] that relative use of such deciduous patches were strong in summer but declined in winter, omnivores in our study in the summer-winter transition showed neither a linear nor a polynomial relationship with proportion of deciduous trees, while invertebrate-feeder abundance declined with deciduous proportion. Oaks are usually linked with higher biodiversity (especially *Q. robur*, which is highly insect-rich and has the highest visitation rates by birds), but oak-rich points in our study were poorest for birds in both periods. It is to be noted that a majority of the herbivorous arthropods on oaks belong to Lepidoptera [45% of the total species richness of phytophages on *Q. robur/petraea*\; @kennedy1984], which attain a peak density in spring. The trees see relatively very low lepidopteran attacks after mid-June [@feeny1970]. When considering all phytophagous insects, there is a second but much smaller peak in abundance in late summer and early autumn of suckers, leaf-miners and gall-formers [@southwood2004]. Thus, the overwhelming preference for oaks by arthropods, and consequently by predatory birds, is likely to be prevalent mainly in spring and summer. The arthropod communities of oaks and their regulation by predators has rarely been explored in the post-breeding periods of late summer and early autumn. Moreover, the specific invertebrate-feeding species present during this summer-autumn transition period such as treecreepers, robin and goldcrest/firecrest are largely specialists and do not prey on external-feeding herbivores. Treecreepers are bark-feeders, robin is mostly a ground-forager and goldcrest is specialised for spruce [firecrest shows no preference for either conifers or broadleaf trees\; @leisler1982].
+Birds generally show a hump-shaped trend with proportion of deciduous trees, with highest numbers found in mixed forests and lowest in both purely coniferous and purely broadleaved patches [e.g., @alatalo1981; @jansson2003; @hagar2007; @ohno1997; @felton2010]. However, in alignment with Alatalo's findings [-@alatalo1981] that relative use of such deciduous patches were strong in summer but declined in winter, omnivores in our study in the summer-winter transition showed neither a linear nor a polynomial relationship with proportion of deciduous trees, while invertivore abundance declined with deciduous proportion. Oaks are usually linked with higher biodiversity (especially *Q. robur*, which is highly insect-rich and has the highest visitation rates by birds), but oak-rich points in our study were poorest for birds in both periods. It is to be noted that a majority of the herbivorous arthropods on oaks belong to Lepidoptera [45% of the total species richness of phytophages on *Q. robur/petraea*\; @kennedy1984], which attain a peak density in spring. The trees see relatively very low lepidopteran attacks after mid-June [@feeny1970]. When considering all phytophagous insects, there is a second but much smaller peak in abundance in late summer and early autumn of suckers, leaf-miners and gall-formers [@southwood2004]. Thus, the overwhelming preference for oaks by arthropods, and consequently by predatory birds, is likely to be prevalent mainly in spring and summer. The arthropod communities of oaks and their regulation by predators has rarely been explored in the post-breeding periods of late summer and early autumn. Moreover, the specific invertebrate-feeding species present during this summer-autumn transition period such as treecreepers, robin and goldcrest/firecrest are largely specialists and do not prey on external-feeding herbivores. Treecreepers are bark-feeders, robin is mostly a ground-forager and goldcrest is specialised for spruce [firecrest shows no preference for either conifers or broadleaf trees\; @leisler1982].
 
 While many studies [e.g., @alatalo1981] directly compare the impacts of tree density and deciduous proportion as habitat variables, the two could have different implications to birds and hence could be selected for differently. At the community level, tree density provides a better fit than proportion of deciduous trees despite their significant correlation, likely due to the variability in values; the same value of tree density can arise in both conifer-dominated and deciduous broadleaf-dominated patches *(see Figure S6)*. Moreover, the overall trend with tree density in the model is negative possibly because the degree of initial avoidance of high-density spruce patches was relatively high while the subsequent preference was not high enough to appear statistically as an interaction of the variable. It became visible, however, when the sampling points were split into groups based on ground vegetation. Interestingly, the same effect was absent with pine, the other common conifer, which could mean that pine is less important than spruce in our study area. @berg1997 similarly observed positive correlations of bird abundance with spruce and none with pine, but this was during the breeding season when spruce is believed to be preferred over pine due to its special canopy structure that provides protected nest sites, and possibly also due to differences in productivity and food availability. On the other hand, @alatalo1981 noticed that foliage-gleaners preferred pine over spruce, presumably due to the abundance of eggs of Lachnidae on pine needles, but this was in winter. However, he also suggests that species like firecrest and *Turdus* thrushes forage in pine forests in late summer, despite avoiding it during the nesting season.
 
@@ -112,11 +112,11 @@ The 'Moss' points (two in total), relative to all other points, had the highest 
 
 Thus, birds early in the season preferred mixed forest patches that had some canopy heterogeneity and low tree densities (which could in turn be related to either tree girth or deciduous proportions), and avoided spruce-dominated points. However, closer to autumn, these points with highly dense canopy structure were increasingly utilised and preferred, and had the highest bird abundances in the end. All this might be suggesting that although mixed species composition, canopy heterogeneity and low tree density are generally the best features and hence can be considered as generally good for birds (such points had relatively high abundances in the end too), spruce-dominated dense patches represent an initially low-value niche that turns into a high-value niche.
 
-The general abundance increase in the bird community as the season progressed was likely not due to better detection rates as the birds became bolder and more active, but rather due to migrants arriving from the north to winter here, although trapping and tracking of individual birds is necessary to confirm this. Further, while abundance of omnivores increased with time, that of invertebrate-feeders remained largely constant. This agrees with the fact that most of the northern migrants that arrive here are omnivores (tits), also suggesting that detectability of the naturally quiet invertebrate-feeders was not a major issue in this study. Unexpectedly, there were very few instances of birds feeding on fruits. This could be either because arthropod abundance in the forest was still high enough to support the birds, or because the birds in this region---mostly non-migrants or partial omnivorous migrants---simply do not shift their foraging strategy, unlike birds elsewhere [see @parrish1997; @parrish2000], and rather only feed on fruits facultatively.
+The general abundance increase in the bird community as the season progressed was likely not due to better detection rates as the birds became bolder and more active, but rather due to migrants arriving from the north to winter here, although trapping and tracking of individual birds is necessary to confirm this. Further, while abundance of omnivores increased with time, that of invertivores remained largely constant. This agrees with the fact that most of the northern migrants that arrive here are omnivores (tits), also suggesting that detectability of the naturally quiet invertivores was not a major issue in this study. Unexpectedly, there were very few instances of birds feeding on fruits. This could be either because arthropod abundance in the forest was still high enough to support the birds, or because the birds in this region---mostly non-migrants or partial omnivorous migrants---simply do not shift their foraging strategy, unlike birds elsewhere [see @parrish1997; @parrish2000], and rather only feed on fruits facultatively.
 
 ## Guilds
 
-The two guilds showing different relationships with habitat characteristics is indirect evidence of differences in their resource-use strategies. Invertebrate-feeders were selective only about one major characteristic, but were highly specific and consistent about it: they avoided oak-dominated homogeneous patches of forest, preferring spruce patches with heterogeneity, and were otherwise broad in resource-use. Omnivores, on the other hand, were affected by a larger interplay of factors and their patterns changed over time, probably because they had to adjust and accommodate the new arrivals. They did not seem to be specific about food resources directly. Rather, they showed a slight structural preference for forest edges with low densities of trees and this remained constant with time, but they formed an additional strong preference for highly heterogeneous areas as the season progressed. The latter could have been extremely important in accommodating the northern arrivals and presumably also enabled the large mixed-species foraging flocks. @alatalo1981 found evidence for the prevalence of interspecific competition in the seasonal environment of Finland. In our case, such competition brought about by migrant arrival was presumably mitigated by the omnivores choosing to form mixed-species flocks. The model for omnivores had a negative binomial distribution, implying overdispersion in omnivore abundance values, corroborating the presence of such flocks.
+The two guilds showing different relationships with habitat characteristics is indirect evidence of differences in their resource-use strategies. Invertivores were selective only about one major characteristic, but were highly specific and consistent about it: they avoided oak-dominated homogeneous patches of forest, preferring spruce patches with heterogeneity, and were otherwise broad in resource-use. Omnivores, on the other hand, were affected by a larger interplay of factors and their patterns changed over time, probably because they had to adjust and accommodate the new arrivals. They did not seem to be specific about food resources directly. Rather, they showed a slight structural preference for forest edges with low densities of trees and this remained constant with time, but they formed an additional strong preference for highly heterogeneous areas as the season progressed. The latter could have been extremely important in accommodating the northern arrivals and presumably also enabled the large mixed-species foraging flocks. @alatalo1981 found evidence for the prevalence of interspecific competition in the seasonal environment of Finland. In our case, such competition brought about by migrant arrival was presumably mitigated by the omnivores choosing to form mixed-species flocks. The model for omnivores had a negative binomial distribution, implying overdispersion in omnivore abundance values, corroborating the presence of such flocks.
 
 ## Conclusion
 
@@ -144,7 +144,7 @@ In conclusion, birds did indeed exhibit habitat selection in the autumn-winter t
 
 ***Figure 3: Abundance of all species of birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model 'all.6'. (A) Coloured lines show mean abundances changing with weeks on X-axis. Coloured ribbons around the lines represent 95% CIs. (B) Large circular dots represent mean bird abundance per point count. Whiskers represent 95% CIs. Dark orange colour represents Week 1 and dark blue represents Week 13. (C, D) Coloured lines show mean abundances and corresponding ribbons represent 95% CIs. Dark orange colour represents Week 1 and dark blue represents Week 13.***
 
-***Table 3: GLMMs of guild abundances with habitat variables. Model names 'inv.x' refer to invertebrate-feeder models while names 'omn.x' refer to omnivore models. Models at each step of term addition/deletion are shown with their corresponding information such as degrees of freedom (df), predictor terms, log-likelihood, AICC (which was used as a selection criterion) and Akaike weight. 'sTPD': scaled proportion of deciduous trees; 'DOM': dominant ground vegetation; 'HC': habitat class; 'CH': canopy heterogeneity; 'TD': tree density.***
+***Table 3: GLMMs of guild abundances with habitat variables. Model names 'inv.x' refer to invertivore models while names 'omn.x' refer to omnivore models. Models at each step of term addition/deletion are shown with their corresponding information such as degrees of freedom (df), predictor terms, log-likelihood, AICC (which was used as a selection criterion) and Akaike weight. 'sTPD': scaled proportion of deciduous trees; 'DOM': dominant ground vegetation; 'HC': habitat class; 'CH': canopy heterogeneity; 'TD': tree density.***
 
 ***Figure 4: Abundance of invertebrate-feeding birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model 'inv.4'. (A) Large circular dots represent mean abundance per point count. Whiskers represent 95% CIs. (B) Line shows mean abundances and corresponding ribbon represents 95% CIs. X-axis shows proportions scaled from original range of 0--100%.***
 
