--- a/manuscript/01_main.Rmd
+++ b/manuscript/01_main.Rmd
@@ -20,15 +20,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Animals assess a wide variety of environmental features at multiple scales, and make a series of hierarchical choices resulting in a preference for certain habitats over others, which is termed habitat selection [@johnson1980; @cody1985]. Broad-scale selection is reflected in species' geographic ranges and in the landscape features surrounding home ranges, while fine-scale selection is reflected in microhabitats used for foraging, reproduction, and shelter [@fretwell1969; @johnson1980; @saab1999]. This raises questions about the ways in which these preferences vary across species, space, time, etc. In birds, however, much of our knowledge on habitat selection is dominated by the breeding season---encompassing both the actual reproductive period as well as the period leading up to mating [e.g., @danchin1998; @bosco2021]. Moreover, most such studies target migratory species, whether it be in their breeding grounds [e.g., @danchin1998; @kleist2017], wintering grounds [usually in the tropics\; e.g., @strasser2019; @ruiz-sanchez2017] or stopover sites [e.g., @papageorgiou2017; @wolfe2014; @cohen2021]. This disproportionate attention is not unjustified: reproductive success and offspring survival have traditionally been strongly linked with fitness, and fitness outcomes are influenced via costs (e.g., predation risk) and benefits (e.g., food availability) of habitat use. In migrants, habitat requirements are complex and vary through the annual cycle, across their geographic range, along migratory routes, and at multiple spatial scales [e.g., @devries2018; @wolfe2014; @rodewald2004; @winker1995].
 
-Nevertheless, there is slowly growing evidence that habitat selection in birds may differ seasonally due to the varying ecological requirements and pressures during the different seasons [@rivera1998; @king2006; @akresh2009; @vitz2011; @dittmar2014]. In the context of temperate birds, questions regarding habitat selection, niche breadth and community structure take on new dimensions in the post-breeding period. For one, the birds are less territorial and more mobile, allowing greater freedom in choosing foraging areas [@uesugi2007]. Additionally, motivations for habitat selection are straightforward and unambiguous; the main challenges are food scarcity coupled with increased food requirements, and the consequently higher predation risk---both for migrants that need to build up enough nutritional reserves and for residents that need to prepare for the oncoming winter. Parent-dependent fledgelings also transition to independent young birds that have to overcome challenges brought by the changing season and by their lack of experience in foraging, navigating and avoiding predators [@anders1997]. Especially to them but also to adults, dense vegetation may provide cover and protection from adverse weather and predators. Dispersing juveniles may even collect social information regarding future site quality during the post-breeding period [@betts2008a].
+Nevertheless, there is slowly growing evidence that habitat selection in birds may differ seasonally due to the varying ecological requirements and pressures during the different seasons [@akresh2009; @vitz2011; @dittmar2014]. In the context of temperate birds, questions regarding habitat selection, niche breadth and community structure take on new dimensions in the post-breeding period. For one, the birds are less territorial and more mobile, allowing greater freedom in choosing foraging areas [@uesugi2007]. Additionally, motivations for habitat selection are straightforward and unambiguous; the main challenges are food scarcity coupled with increased food requirements, and the consequently higher predation risk---both for migrants that need to build up enough nutritional reserves and for residents that need to prepare for the oncoming winter. Parent-dependent fledgelings also transition to independent young birds that have to overcome challenges brought by the changing season and by their lack of experience in foraging, navigating and avoiding predators [@anders1997]. Especially to them but also to adults, dense vegetation may provide cover and protection from adverse weather and predators. Dispersing juveniles may even collect social information regarding future site quality during the post-breeding period [@betts2008a]. Finally, this period represents a transition from summer to winter, which might also result in a gradual shift from one selection strategy to another over the post-breeding period. Thus, not only might habitat preferences in the post-breeding period be different from this during the breeding season, but they might also be dynamic over the course of the season. This warrants an investigation of post-breeding habitat selection at a fine temporal resolution.
 
-Among temperate forests, oak forests are widely believed to be the most biodiversity-rich, supporting a highly diverse arthropod community which in turn supports a larger vertebrate community [@kennedy1984]. Although many migratory birds are known to become facultatively frugivorous in autumn [@herrera1978a; @gauthreauxjr1982; @parrish1997; @parrish2000; @mcwilliams2001; @salewski2006], making them less reliant on the declining arthropods, European temperate forests have a lower diversity of fleshy-fruit plants than North American ones [@campbell1982]. Thus, the dietary options for post-breeding Central European forest birds are rather limited.
+Among temperate forests, oak forests are widely believed to be the most biodiversity-rich, supporting a highly diverse arthropod community which in turn supports a larger vertebrate community [@kennedy1984]. Many migratory birds become facultatively frugivorous in autumn [@herrera1978a; @gauthreauxjr1982; @parrish2000; @salewski2006] and therefore less reliant on the declining arthropods. However, temperate forests in Europe can have lower fleshy-fruit plant diversity than North American ones [@campbell1982], which might limit dietary options for post-breeding Central European forest birds. These various ecological pressures may give rise to competitive interactions. With interspecific competition, species within the same guild would have smaller overall habitat breadths and overlaps, due to similar resource-use patterns [@svardson1949]. On the other hand, predation is more important than feeding competition---which is generally lower between species than within [@terborgh1990a]---in closed habitats such as woodlands because predators attack at a close range. The absence of competition would allow species in the same guild to overlap more and take advantage of a shared feeding strategy. Hence, birds can be expected to select for habitats that maximise foraging efficiency and, eventually, survival. For instance, mixed-species foraging flocks not only allow higher and more efficient foraging rates but also minimise costs of vigilance against predators [@sridhar2009].
 
-Under these various ecological pressures, competitive interactions may arise. In the presence of interspecific competition, species within the same guild would have smaller overall habitat breadths and overlaps, due to similar resource use patterns [@svardson1949]. On the other hand, in closed habitats such as woodlands, predators attack at a close range and predation is thus more important than feeding competition which is generally lower between species than within [@terborgh1990a]. The absence of competition would allow species in the same guild to overlap more and take advantage of a shared feeding strategy. Hence, birds can be expected to select for habitats that maximise foraging efficiency and, eventually, survival. One such example is that of mixed-species foraging flocks, which not only allow higher and more efficient foraging rates, but also minimise costs of vigilance against predators [@sridhar2009].
+Habitat selection patterns and strategies are therefore likely to be driven more strongly by characteristics of the habitat (e.g., vegetation structure) than by dietary preferences, and can be analysed by comparing bird abundances or densities with habitat features such as canopy cover, habitat heterogeneity, tree density, and species richness [@vitz2007]. For instance, @berg1997 found that breeding bird abundances correlated positively with the presence of deciduous trees and with tree diameter, while among conifers the Norway spruce *Picea abies* was preferred over the pine *Pinus sylvestris*. Spatial segregation of habitats at a relatively fine scale is suggested to allow for the co-occurrence of more species. However, most modern-day forests in Central Europe have been restructured towards commercially exploited plantations dominated by spruce that form compact growths with a closed above-tree layer at maturity [@fanta2007]. As a result, birds during the post-breeding period could show a strong foraging preference for oak forest patches, which not only support higher biodiversity but also have more heterogeneous canopies and understoreys than the structurally uniform coniferous forests [e.g., @bergner2015]. Therefore, even if habitat characteristics are more important during this period than dietary preferences, foraging guilds might opt for different selection strategies. Omnivores, which tend to be more generalist and might also join mixed-species flocks, might prefer habitat patches with higher heterogeneity, openness, and structural and biological diversity. On the other hand, the specialist invertivores, which do not prey on external-feeding herbivores, might prefer the more homogeneous and dense stands of coniferous forest.
 
-Habitat selection patterns and strategies are therefore likely to be driven more strongly by characteristics of the habitat, than by dietary preferences. Bird abundances or densities are compared with habitat features such as canopy cover, heterogeneity, tree density, and species richness to analyse habitat selection [@vitz2007; @berg1997] found that breeding bird abundances correlated positively with the presence of deciduous trees and with tree diameter, while among conifers the Norway spruce *Picea abies* was preferred over the pine *Pinus sylvestris*. Spatial segregation of habitats at a relatively fine-grained scale is suggested to allow for the co-occurrence of more species. However, most modern-day forests in Central Europe have been restructured towards commercially exploited plantations dominated by spruce that form compact growths with a closed above-tree layer at maturity [@fanta2007]. While intense management and disturbance regimes do bring in heterogeneity, they do not facilitate biodiversity for obvious reasons. As a result, birds during the post-breeding period could show a strong foraging preference for oak forest patches, which not only support higher biodiversity but also have more heterogeneous canopies and understoreys than the structurally uniform coniferous forests [e.g., @bergner2015].
-
-In this study, we investigated patterns of habitat selection exhibited by forest bird communities in the post-breeding period at a fine-grained temporal (weeks) and spatial (patches) resolution in Central Europe. The main objectives were to identify the habitat features that are tracked most prominently in this period of high stress (the autumn-winter transition), to assess the patterns and magnitude of habitat selection as well as their possible temporal dynamism with the seasonal transition, and to explore potential differences in ecological interactions and strategies between guilds.
+In this study, we investigated patterns of habitat selection exhibited by forest bird communities in the post-breeding period at a fine-grained temporal (weeks) and spatial (patches) resolution in Central Europe. Our main objectives were to identify the structural or biological habitat features that are tracked most prominently in this period of high stress (the autumn-winter transition), to assess the patterns and magnitude of habitat selection as well as their possible temporal dynamism across the seasonal transition, and to determine whether selection strategies differed between bird foraging guilds.
 
 # Methodology
 
@@ -94,7 +92,7 @@ Despite the absence of a significant correlation between canopy heterogeneity an
 
 ## The surprising role of oak in post-breeding season
 
-Birds generally show a hump-shaped trend with proportion of deciduous trees, with highest numbers found in mixed forests and lowest in both purely coniferous and purely broadleaved patches [e.g., @alatalo1981; @jansson2003; @hagar2007; @ohno1997; @felton2010]. However, in alignment with Alatalo's findings [-@alatalo1981] that relative use of such deciduous patches were strong in summer but declined in winter, omnivores in our study in the summer-winter transition showed neither a linear nor a polynomial relationship with proportion of deciduous trees, while invertivore abundance declined with deciduous proportion. Oaks are usually linked with higher biodiversity (especially *Q. robur*, which is highly insect-rich and has the highest visitation rates by birds), but oak-rich points in our study were poorest for birds in both periods. It is to be noted that a majority of the herbivorous arthropods on oaks belong to Lepidoptera [45% of the total species richness of phytophages on *Q. robur/petraea*\; @kennedy1984], which attain a peak density in spring. The trees see relatively very low lepidopteran attacks after mid-June [@feeny1970]. When considering all phytophagous insects, there is a second but much smaller peak in abundance in late summer and early autumn of suckers, leaf-miners and gall-formers [@southwood2004]. Thus, the overwhelming preference for oaks by arthropods, and consequently by predatory birds, is likely to be prevalent mainly in spring and summer. The arthropod communities of oaks and their regulation by predators has rarely been explored in the post-breeding periods of late summer and early autumn. Moreover, the specific invertebrate-feeding species present during this summer-autumn transition period such as treecreepers, robin and goldcrest/firecrest are largely specialists and do not prey on external-feeding herbivores. Treecreepers are bark-feeders, robin is mostly a ground-forager and goldcrest is specialised for spruce [firecrest shows no preference for either conifers or broadleaf trees\; @leisler1982].
+Birds generally show a hump-shaped trend with proportion of deciduous trees, with highest numbers found in mixed forests and lowest in both purely coniferous and purely broadleaved patches [e.g., @alatalo1981; @jansson2003; @hagar2007; @ohno1997; @felton2010]. However, in alignment with Alatalo's findings [-@alatalo1981] that relative use of such deciduous patches were strong in summer but declined in winter, omnivores in our study in the summer-winter transition showed neither a linear nor a polynomial relationship with proportion of deciduous trees, while invertivore abundance declined with deciduous proportion. Oaks are usually linked with higher biodiversity (especially *Q. robur*, which is highly insect-rich and has the highest visitation rates by birds), but oak-rich points in our study were poorest for birds in both periods. It is to be noted that a majority of the herbivorous arthropods on oaks belong to Lepidoptera [45% of the total species richness of phytophages on *Q. robur/petraea*\; @kennedy1984], which attain a peak density in spring. The trees see relatively very low lepidopteran attacks after mid-June [@feeny1970]. When considering all phytophagous insects, there is a second but much smaller peak in abundance in late summer and early autumn of suckers, leaf-miners and gall-formers [@southwood2004]. Thus, the overwhelming preference for oaks by arthropods, and consequently by predatory birds, is likely to be prevalent mainly in spring and summer. The arthropod communities of oaks and their regulation by predators has rarely been explored in the post-breeding periods of late summer and early autumn. Moreover, the specific invertivore species present during this summer-autumn transition period such as treecreepers, robin and goldcrest/firecrest are largely specialists and do not prey on external-feeding herbivores. Treecreepers are bark-feeders, robin is mostly a ground-forager and goldcrest is specialised for spruce [firecrest shows no preference for either conifers or broadleaf trees\; @leisler1982].
 
 While many studies [e.g., @alatalo1981] directly compare the impacts of tree density and deciduous proportion as habitat variables, the two could have different implications to birds and hence could be selected for differently. At the community level, tree density provides a better fit than proportion of deciduous trees despite their significant correlation, likely due to the variability in values; the same value of tree density can arise in both conifer-dominated and deciduous broadleaf-dominated patches *(see Figure S6)*. Moreover, the overall trend with tree density in the model is negative possibly because the degree of initial avoidance of high-density spruce patches was relatively high while the subsequent preference was not high enough to appear statistically as an interaction of the variable. It became visible, however, when the sampling points were split into groups based on ground vegetation. Interestingly, the same effect was absent with pine, the other common conifer, which could mean that pine is less important than spruce in our study area. @berg1997 similarly observed positive correlations of bird abundance with spruce and none with pine, but this was during the breeding season when spruce is believed to be preferred over pine due to its special canopy structure that provides protected nest sites, and possibly also due to differences in productivity and food availability. On the other hand, @alatalo1981 noticed that foliage-gleaners preferred pine over spruce, presumably due to the abundance of eggs of Lachnidae on pine needles, but this was in winter. However, he also suggests that species like firecrest and *Turdus* thrushes forage in pine forests in late summer, despite avoiding it during the nesting season.
 
